kubernetes/apps/observability/grafana/instance/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/description: Observability and data visualization platform
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: grafana
    gethomepage.dev/name: Grafana
    gethomepage.dev/href: https://grafana.${SECRET_DOMAIN}
    gethomepage.dev/pod-selector: >-
      app=grafana
    gethomepage.dev/widget.type: prometheusmetric
    gethomepage.dev/widget.url: http://prometheus-operated.observability.svc.cluster.local:9090
    gethomepage.dev/widget.metrics.0.label: Dashboards
    gethomepage.dev/widget.metrics.0.query: grafana_stat_totals_dashboard
    gethomepage.dev/widget.metrics.1.label: Total alerts
    gethomepage.dev/widget.metrics.1.query: grafana_stat_totals_alert_rules
    gethomepage.dev/widget.metrics.2.label: Alerts triggered
    gethomepage.dev/widget.metrics.2.query: grafana_alerting_alerts{state="alerting"}

spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - grafana.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: strict-transport-security
                value: max-age=31536000
      backendRefs:
        - name: grafana-service
          port: 3000
